# gauchohousing

./: .gitignore  LICENSE  README.md
backend/: db.sqlite3  flake.nix  manage.py  pyproject.toml
backend/housingUCSB/: asgi.py  settings.py  urls.py  wsgi.py
backend/web_scraper/: admin.py  apartments.csv  apps.py  crimedata.csv  models.py  opinions.csv  urls.py  views.py
backend/web_scraper/migrations/: 0001_initial.py  0002_apartment_map_image_url.py  0003_crime.py  0004_apartment_overall_satisfaction_and_more.py
frontend/: README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts
frontend/src/: app.d.ts
frontend/src/lib/: store.ts  types.ts
frontend/src/lib/components/: app-sidebar.svelte  badges.svelte  map-popover.svelte  price-slider.svelte  settings.svelte
frontend/src/lib/components/ui/accordion/: accordion-item.svelte
frontend/src/lib/components/ui/alert/: alert-description.svelte  alert.svelte  index.ts
frontend/src/lib/components/ui/alert-dialog/: alert-dialog-action.svelte  alert-dialog-content.svelte  index.ts
frontend/src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar.svelte
frontend/src/lib/components/ui/badge/: badge.svelte
frontend/src/lib/components/ui/breadcrumb/: breadcrumb-item.svelte  breadcrumb-link.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/calendar/: calendar-grid-row.svelte  calendar-head-cell.svelte  calendar-header.svelte  calendar-heading.svelte  (+1 more)
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
(+103 files in other folders)
